dropshot/tests/fail/bad_server_endpoint20.rs
// Copyright 2024 Oxide Computer Company

#![allow(unused_imports)]

use dropshot::HttpError;
use dropshot::HttpResponseUpdatedNoContent;
use dropshot::RequestContext;

// Check that MyServer is present in the generated output, even though one
// of the endpoint annotations is incorrect.
#[dropshot::server]
trait MyServer {
    type Context;

    #[endpoint {
        method = UNKNOWN,
        path = "/test",
    }]
    async fn bad_endpoint(
        rqctx: RequestContext<Self::Context>,
    ) -> Result<HttpResponseUpdatedNoContent, HttpError>;
}

enum MyImpl {}

// This should not produce errors about items being missing.
impl MyServer for MyImpl {
    type Context = ();

    async fn bad_endpoint(
        _rqctx: RequestContext<Self::Context>,
    ) -> Result<HttpResponseUpdatedNoContent, HttpError> {
        Ok(HttpResponseUpdatedNoContent())
    }
}

fn main() {}
